syntax = "proto3";


message TradeRule
{
    string acctNumber=1;
    string symbol = 2;
    double sellLowPrice = 3;
    double sellHighPrice = 4;
    double buyLowPrice = 5;
    double buyHighPrice =6;
    RuleType ruleType = 7;
    int64 quantity = 8;
    
    
    
    enum RuleType
	{
	   BUY = 0;
	   SELL = 1;
	}
    
}


message TradeRuleRequest
{
    TradeRule tradeRule = 1;
}	


message TradeRuleResponse
{
     string ruleOrderId = 1;
}



service TradeRuleRpcService 
{
  rpc submitTradeRule(TradeRuleRequest) returns (TradeRuleResponse);
  
}